@@ -16,8 +16,7 @@
  * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA
  */
 
-#ifndef __WINE_DSOUND_H
-#define __WINE_DSOUND_H
+#ifndef __DSOUND_INCLUDED__
 #define __DSOUND_INCLUDED__
 
 #include <_mingw_dxhelper.h>
@@ -1197,4 +1196,4 @@ DECLARE_INTERFACE_(IDirectSoundFullDuplex,IUnknown)
 } /* extern "C" */
 #endif /* defined(__cplusplus) */
 
-#endif /* __WINE_DSOUND_H */
+#endif /* __DSOUND_INCLUDED__ */
